image stretch issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@ html{
   margin: 0 auto;
   width: 90%;
 }
+img{
+  display: block;
+  width: 100%;
+  height: auto;
+}
 
 body {
   margin: 0;
